fixed content overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ h1 {
     padding: 0;
     overflow-x: hidden;
   }
+
   body {
     overflow-x: hidden;
   }
@@ -99,6 +100,8 @@ h1 {
   }
   .content {
     margin: 0;
+    overflow: hidden;
+    /* height: 300vh; */
   }
   ._intro {
     grid-template-columns: 1fr 1fr;
@@ -110,7 +113,7 @@ h1 {
   }
   .display {
     height: 800px;
-    /* width: 1000px; */
+    overflow: hidden;
   }
   .display img {
     height: 750px;
@@ -150,9 +153,23 @@ h1 {
     margin: 0px 40px 50px 40px;
     box-shadow: 8px 0px 12px #bebbbb;
     width: 320px;
+    overflow: hidden;
+    height: 132vh;
   }
   .svgimage img {
     height: 200px;
     width: 300px;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  .display img {
+    height: 750px;
+    width: 2500px;
+    object-fit: cover;
+    -webkit-filter: blur(5px);
+    filter: blur(3px);
+    z-index: -1;
+    position: relative;
   }
 }
